--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_section1">Register</string>
     <string name="title_section2">Make Teams</string>
     <string name="title_section3">Settings</string>
+    <string name="submit">Submit</string>
+    <string name="make_teams">Make Teams</string>
 
 </resources>
